# pancake

./: .gitattributes  .gitignore  AGENTS.md  AGENT_REPORT.md  ARCHITECTURE.md  ASSESSMENT.md  AUDIT.md  AUDIT_PLAN.md  BUILD.md  BUILDING.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MODEL_CHANGES_2025_물성_캐비테이션.md  PHYSICS.md  PLAN.md  PLAN_BUBBLE.md  README.md  REVIEW.md  REVIEW_VERDICT.md  config.txt  config_r290_pz68.txt  config_r290_pz68_quick.txt  config_r290_pz68_table.txt
cmake/: deploy_mingw_runtime.cmake  embed_binary.cmake
data/R290_PZ68S/: README.md  r290_pz68s.csv  r290_pz68s.py
docs/: CAVITATION_OIL_REFRIGERANT.md  GUI_ARCHITECTURE.md  PROJECT_CONTRIBUTIONS.md  WINDOWS_PORT.md
src/: bubble_config.cpp  bubble_config.hpp  bubble_io.cpp  bubble_io.hpp  bubble_linear_system.cpp  bubble_linear_system.hpp  bubble_main.cpp  communicator.cpp  communicator.hpp  config.hpp  diagnostics.cpp  diagnostics.hpp  energy.cpp  energy.hpp  equation_of_state.hpp  field.cpp  field.hpp  fields.hpp  film_thickness.cpp  film_thickness.hpp  fluid_properties.cpp  fluid_properties.hpp  fvm.cpp  fvm.hpp  gas_transport.cpp  gas_transport.hpp  gui_win32.cpp  io.cpp  io.hpp  journal_motion.cpp  journal_motion.hpp  linear_system.cpp  linear_system.hpp  logger.cpp  logger.hpp  main.cpp  mask.cpp  mask.hpp  mesh.cpp  mesh.hpp  (+16 more)
src/gui/: exports.cpp  exports.hpp  gui_app.cpp  gui_app.hpp  main_gui.cpp  pancake_gui.manifest  pancake_gui.rc  panels_results.cpp  panels_setup.cpp  results.cpp  results.hpp  schema.cpp  schema.hpp  settings.cpp  settings.hpp  solver_runner.cpp  solver_runner.hpp  theme.cpp  theme.hpp  win_util.hpp
tests/: CMakeLists.txt  test_bc.cpp  test_coupling.cpp  test_diagnostics.cpp  test_elrod_a1.cpp  test_elrod_a2.cpp  test_elrod_bc.cpp  test_energy.cpp  test_eos.cpp  test_fluid_properties.cpp  test_forces.cpp  test_fvm.cpp  test_gas_coupling.cpp  test_gas_transport.cpp  test_inlets.cpp  test_io.cpp  test_journal_motion.cpp  test_linear_system.cpp  test_mask.cpp  test_property_tables.cpp  test_schemes.cpp  test_stereo_mesh.cpp  test_surface_operators.cpp  test_thickness_transport.cpp  test_velocity.cpp
tools/: results_parser_check.cpp
validation/grid_convergence/: README.md  config_base.txt  run.ps1  run.sh
