function(add_pancake_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE pancake_core)
    target_compile_features(${name} PRIVATE cxx_std_20)
    pancake_deploy_mingw_runtime(${name})
    if(name STREQUAL "test_eos")
        add_test(NAME ${name} COMMAND ${name})
    else()
        add_test(NAME ${name}
            COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:${name}>)
    endif()
endfunction()

add_pancake_test(test_linear_system)
add_pancake_test(test_fvm)
add_pancake_test(test_eos)
add_pancake_test(test_elrod_a1)
add_pancake_test(test_elrod_a2)
add_pancake_test(test_elrod_bc)
add_pancake_test(test_inlets)
add_pancake_test(test_velocity)
add_pancake_test(test_bc)
