function(add_pancake_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE pancake_core)
    target_compile_features(${name} PRIVATE cxx_std_20)
    pancake_deploy_mingw_runtime(${name})
    if(name STREQUAL "test_eos")
        add_test(NAME ${name} COMMAND ${name})
    else()
        add_test(NAME ${name}
            COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:${name}>)
    endif()
endfunction()

add_pancake_test(test_linear_system)
add_pancake_test(test_fvm)
add_pancake_test(test_eos)
add_pancake_test(test_elrod_a1)
add_pancake_test(test_elrod_a2)
add_test(NAME test_elrod_a2_mpi6
    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 6 $<TARGET_FILE:test_elrod_a2>)
add_pancake_test(test_elrod_bc)
add_pancake_test(test_inlets)
add_pancake_test(test_velocity)
add_pancake_test(test_bc)
add_pancake_test(test_journal_motion)
add_pancake_test(test_forces)
add_pancake_test(test_energy)
add_pancake_test(test_io)
add_pancake_test(test_fluid_properties)
add_pancake_test(test_gas_transport)
add_pancake_test(test_diagnostics)
add_pancake_test(test_schemes)
add_test(NAME test_schemes_mpi6
    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 6 $<TARGET_FILE:test_schemes>)
add_pancake_test(test_property_tables)
target_compile_definitions(test_property_tables PRIVATE
    PANCAKE_DATA_DIR="${CMAKE_SOURCE_DIR}/data")
add_pancake_test(test_coupling)
add_pancake_test(test_gas_coupling)
